SSCS-10517 - code refactor - fixed base location logic for CcdCallbackHandler - fixed base location logic for SscsCaseTransformer - updated tests